# cpwd

./: .editorconfig  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  README.md  bootstrap  configure.ac  cpwd.c  cpwdtest.c  flymake.mk  info.c  info.h  parse_input.c  parse_input.h  parse_wrapper.c  parse_wrapper.h  password.c  password.h  test.c  test.h  utility.c  utility.h
.github/workflows/: cpwd.yml
doc/: Makefile.am  cpwd.texi
lib/: Makefile.am  info.c  info.h  password.c  password.h  utility.c  utility.h
man/: Makefile.am  cpwd.1
src/: Makefile  Makefile.am  cpwd.c  info.c  info.h  main.c  parse_input.c  parse_input.h  parse_wrapper.c  parse_wrapper.h  password.c  password.h  utility.c  utility.h
src/include/: parse_input.h  parse_wrapper.h
test/: Makefile.am  all_password  all_password.c  cpwdtest.c  delete_password  new_password  remove_file  remove_file.c  search_password  search_password.c  test.c  test.h
tests/: Makefile  Makefile.am  all_password.c  all_password_test.c  cpwdtest.c  delete_password.c  delete_password_test.c  file_password_test.c  file_password_xfail_test.c  new_password.c  new_password_test.c  remove_file.c  remove_file_password_test.c  search_password.c  search_password_test.c  test.c  test.h  tests.c  tests.h  utility_test.h
tests/include/: utility_test.h
tests/testsuite/: Makefile.am  cpwd.exp  cpwd.sum  site.exp
testsuite/: Makefile.am  site.exp
testsuite/config/: default.exp
testsuite/cpwd.tests/: cpwd.exp
testsuite/lib/: cpwd.exp
